# UFC-Scraper

./: .gitignore  .pre-commit-config.yaml  CleanData.py  DockerFile  GetNextEvent.py  Pipfile  README.md  Scraper.py  UFC_Scraper.ipynb  UFC_cleaned.csv  api_test.py  cleaning_playground.ipynb  config.py  dev-requirements.txt  docker-compose.yml  eda.py  fe.py  main.py  manage.py  mypy.ini  ne.py  newscraper.py  playground.ipynb  pyproject.toml  requirements.txt  simpledb.db  single_example.py  test.csv  test.py  training_test.py
apps/ufc/: models.py
artefacts/: raw_events.json
client/: Dockerfile  package-lock.json  package.json
client/docs/: 1-architecture-overview.md  2-trpc-integration.md  3-data-fetching.md  4-component-architecture.md  5-state-management.md  6-performance.md  trpc-implementation.md
client/src/: env.js
client/src/app/: layout.tsx  page.tsx
client/src/trpc/: query-client.ts
client/src/types/: fights.ts
data/: clean_ufc_data.csv  event_cache.json  next_event.csv  raw_ufc_data.csv  training_data.csv
data_old/: clean_ufc_data.csv  event_cache.json  raw_ufc_data.csv  training_data.csv
local_scripts/: main.py  ne.py  training_test.py
old/: CleanData.py  Dockerfile  Functions.py  Next_Event.csv  PredictNextEvent.py  UFC_Scraper.ipynb  UFC_cleaned.csv  cache_processing.py  docker-compose.yaml  ufc_raw.csv
old/learndb/: UFCStats.db  dbconnect.py  simple.db  sqlite.py
server/tables/: db_tables.py
src/apps/predictor/: apps.py  urls.py  views.py
src/apps/preprocessing/: apps.py  urls.py  views.py
src/apps/scraper/: apps.py  models.py  urls.py  views.py
src/config/: config.py
src/lib/abstract/: __init__.py  data_processor.py  (+1 more)
src/server/: asgi.py  settings.py  urls.py  wsgi.py
src/utils/: utils.py
tests/html_pages/: fighter_profile.html
tests/test_scrapers/: test_bouts.py  test_fighters.py
ufc_scraper/base_classes/: __init__.py  dataframe_abc.py  scraper_abc.py
ufc_scraper/config/: config.py
ufc_scraper/data/: clean_ufc_data.csv  event_cache.csv  event_cache.json  next_event.csv  raw_ufc_data.csv  training_data.csv
ufc_scraper/data_cleaning/: __init__.py  data_cleaning.py
ufc_scraper/data_processing/: __init__.py  cache_processing.py  data_cleaning_handler.py  feature_processor.py  raw_data_processing.py
ufc_scraper/feature_engineering/: __init__.py  feature_engineering.py  fighter.py
ufc_scraper/modelling/: __init__.py  inference.py  tracking.py  training.py
ufc_scraper/models/: __init__.py  regression.py
ufc_scraper/pipelines/: __init__.py  data_cleaning.py  data_cleaning_pipeline.py  feature_engineering.py  next_event.py  scraping.py  scraping_pipeline.py
ufc_scraper/processors/: __init__.py  data_cleaning.py  data_processor.py  feature_engineering.py
ufc_scraper/scrapers/: __init__.py  bout_scraper.py  bouts.py  card_scraper.py  cards.py  event_scraper.py  fighter_scraper.py  fighters.py  homepage.py  homepage_scraper.py  next_event.py
ufc_scraper/utils/: utils.py
(+45 files in other folders)
